--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0"
+    "jsdom": "^24.0.0",
+    "typescript": "^4.9.5",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.3",
+    "ts-node": "^10.9.2",
+    "jest":"^29.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "jest": "jest"
   },
   "browserslist": {
     "production": [
